@@ -1,13 +1,19 @@
 2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
+	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
 	* src/murrine_style.c (murrine_style_draw_box):
-    Fixed a small bug in the progressbar.
+	Draw rounded scrollbars sliders when GtkRange::trough-border > 0.
+
+2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_style_draw_box):
+	Fixed a small bug in the progressbar.
 
 2008-12-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_menuitem):
-    Use lightborder_ratio of the theme,
-    please disable it in the gtkrc if you don't want it.
+	Use lightborder_ratio of the theme,
+	please disable it in the gtkrc if you don't want it.
 
 2008-12-14  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
